[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://SMS RPG Soldier FREE Files/SMS RPG Soldier FREE Files/RUN/SMS_Soldier_RUN_EAST_strip4.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.5, 11 )

[sub_resource type="CircleShape2D" id=7]
radius = 13.1529

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 0 )
scale = Vector2( 1.0625, 1 )
frames = SubResource( 5 )
animation = "Run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 6 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 11, 0 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -17, -1 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Detection" to="." method="_on_Detection_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
